# judge-markday

./: .gitignore  README.md  judge.py  mark_day.py  pyproject.toml
.github/workflows/: release.yml
