[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judge_markday"
version = "0.1.0"
description = "Utility for marking daily results with judge integration"
authors = [
  { name="Andrii Meleshkov" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

