[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "judge-markday"
.1.8"
description = "Utility for marking daily results with judge integration"
authors = [
  { name = "Andrii Meleshkov" }
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"

[tool.setuptools]
packages = ["judge"]

[project.scripts]
mark-day = "judge.mark_day:main"
